fix: fix text overflow in class and id badges

--- a/automad/src/client/admin/styles/components/editor/tunes/attributes.less
+++ b/automad/src/client/admin/styles/components/editor/tunes/attributes.less
@@ -26,46 +26,19 @@
  *
  * AUTOMAD
  *
- * Copyright (c) 2022-2026 by Marc Anton Dahmen
+ * Copyright (c) 2026 by Marc Anton Dahmen
  * https://marcdahmen.de
  *
  * See LICENSE.md for license information.
  */
 
-.am-e-badge {
-	--text: var(--am-clr-text-badge);
-	--bg: var(--am-clr-background-badge);
-
-	box-sizing: border-box;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	gap: 0.35em;
-	font-size: 0.75rem;
-	height: 1.8em;
-	line-height: 1.8em;
-	min-width: 2.5em;
+.am-c-ed-tu-attribute-badges {
+	display: flex;
+	gap: 0.4rem;
+	flex-wrap: nowrap;
 	max-width: 100%;
-	padding: 0 0.85em;
-	border-radius: 100px;
-	color: hsl(var(--text));
-	background-color: hsl(var(--bg));
-	font-weight: 740;
 
-	&,
 	& > * {
-		overflow: hidden;
-		white-space: nowrap;
-		text-overflow: ellipsis;
-	}
-
-	[class*='--danger'] & {
-		--text: var(--am-clr-background-danger);
-		--bg: var(--am-clr-text-danger);
-	}
-
-	&--muted {
-		--text: var(--am-clr-text-muted);
-		--bg: var(--am-clr-background-faded);
+		min-width: 0px;
 	}
 }
